# Mammut

./: Cargo.toml
src/: apps.rs  lib.rs  registration.rs  status_builder.rs
src/entities/: attachment.rs  card.rs  mod.rs  notification.rs  ws.rs
