[package]
name = "mammut"
version = "0.8.0"
description = "A wrapper around the Mastodon API."
authors = ["Aaron Power <theaaronepower@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Aaronepower/mammut.git"
keywords = ["api", "web", "social", "mastodon", "wrapper"]
categories = ["web-programming", "http-client"]

[dependencies]
ws = { git = "https://github.com/housleyjk/ws-rs.git", version = "0.7.1" }
websocket = { git = "https://github.com/cyderize/rust-websocket.git", version = "0.20.2" }
url = "1.4.0"
reqwest = "*"
serde = "1"
serde_json = "1"
serde_derive = "1"
hyper = "*"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
